--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.0.4",
+    "react-model": "^4.1.4",
     "umi": "^3.5.0",
     "umi-serve": "^1.9.10"
   },
