--- a/backend/daruan/src/main/resources/application.yml
+++ b/backend/daruan/src/main/resources/application.yml
@@ -13,4 +13,14 @@ mybatis:
   mapper-locations: classpath:mappers/*.xml
   type-aliases-package: com.example.daruan.entity
 
+  spring:
+    servlet:
+      multipart:
+        enabled: true
+        max-file-size: 200MB
+        max-request-size: 200MB
+        location: /home/lighthouse/daruan/files/
 
+    upload:
+      picture:
+        path: /home/lighthouse/daruan/files/image/
